core/src/zeit/find/browser/resources/find.css
#fulltext {
  width: 300px;
}

.search_entry {
  width:350px;
  margin: 5px;
  margin-bottom: 20px;
}

.search_entry .teaser_title {
  font-size: 1.2em;
}

.search_entry .teaser_text {
  font-size: 0.9em;
}

.search_entry .recent_links {
  float: left;
}

.search_entry .recent_links img {
  margin: 5px;
}

.search_entry .filters {
  text-align: right;
  font-size: 0.7em;
}

.search_entry a {
  color: blue;
  text-decoration: underline;
}

#result_filters div,
#extended_search {
  display: inline-table;
  margin-bottom: 10px;
}

#result_filters div div,
#extended_search div {
  display: table-row;
}

#result_filters #filter_time,
#result_filters #filter_topic,
#result_filters #filter_author,
#result_filters #filter_type,
#extended_search div label,
#extended_search div select,
#extended_search div input {
  display: table-cell;
}


#cp-search > div[id] {
  bottom: 0;
  left: 0;
  overflow-y: auto;
  position: absolute;
  right: 0;
  top: 3em;
}

#cp-search> .context-views {
  border-bottom: 1px solid black;
  height: 2em;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}

.favorite_url,
.related_url {
  display: none;
}

.related_links {
  min-height: 1em;
  background: url('arrow_right.png') no-repeat top left;
  cursor: pointer;
  float:left;
  right:0;
  top:0;
  width:12px;
  height: 0.7em;

}

.related_links.expanded {
  background: url('arrow_down.png') no-repeat top left;
  cursor: pointer;
}

.toggle_favorited {
  cursor: pointer;
}

.related_info {
  margin-top: 7px;
}

#cp-search #search_form {
  overflow-y: auto;
}

